--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run styles lint and format check
         run: npm run lint:css
   deploy:
-    needs: [build, job]
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
