--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       # Step 3 - Add tests and linting here
-      - name: Use Node.js 14.x
+      - name: Run tests
         run: npm run test
       - name: Run typescript lint and format check
         run: npm run lint:ts
